--- a/04 FSLoggerConsole/FSLoggerConsole/App.config
+++ b/04 FSLoggerConsole/FSLoggerConsole/App.config
@@ -1,29 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="unity"
-          type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection,
-                Microsoft.Practices.Unity.Configuration, Version=1.1.0.0,
-                Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration, Version=2.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
   </configSections>
+
   <unity>
-    <typeAliases>
-      <!-- LifetimeMager 타입 -->
-      <typeAlias alias="singleton"
-          type="Microsoft.Practices.Unity.ContainerControlledLifetimeManager,
-            Microsoft.Practices.Unity" />
-
-    </typeAliases>
     <containers>
-      <container name="container01">
+      <container>
         <types>
-          <!-- 타입 매핑 등록-->
-          <type type="Dalbong.Framework.ILogger,Dalbong.Framework" mapTo="Site.Framework.FSLogger,Site.Framework">
-            <lifetime type="singleton" />
-          </type>
+          <type type="mkFx.Framework.ILogger, mkFx.Framework" mapTo="Site.Framework.FSLogger, Site.Framework" />
         </types>
-
       </container>
     </containers>
   </unity>
