--- a/04 FSLoggerConsole/FSLoggerConsole/FSLoggerConsole.csproj
+++ b/04 FSLoggerConsole/FSLoggerConsole/FSLoggerConsole.csproj
@@ -40,7 +40,11 @@
     <Reference Include="Microsoft.Practices.Unity">
       <HintPath>..\..\_bin\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration">
+      <HintPath>..\..\_bin\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -65,6 +69,11 @@
       <Project>{CB516CCC-3859-4C8D-898E-46B1CCA0B7F9}</Project>
       <Name>Site.Job01</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
